language/tests/run_pass/call_task_subregion.lg
-- Copyright 2015 Stanford University
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

import "legion"

local c = legionlib.c

task f(s : region(int), y : ptr(int, s)) : int
where reads(s) do
  return @y
end

task g() : int
  var r = region(int, 5)
  var rc = [c.legion_coloring_create]();
  [c.legion_coloring_ensure_color](rc, 0)
  var p = partition(disjoint, r, rc)
  [c.legion_coloring_destroy](rc)
  var r0 = p[0]
  var x = new(ptr(int, r0))
  @x = 5
  return f(r0, x)
end

task main()
  legionlib.assert(g() == 5)
end
legionlib.start(main)
